--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ description = "Toy repo for CI lecture"
 readme = "README.md"
 requires-python = ">=3.13"
 license = { text = "MIT" }
-authors = [{ name = "Your Name" }]
+authors = [{ name = "YDY" }]
 dependencies = []
 
 [tool.setuptools.packages.find]
